# cs467-microcontroller

./: CMakeLists.txt  CMakePresets.json  README.md  StyleGuide.md  display.c  display.h  led_array.c  led_array.h  lwipopts.h  main.c  network.c  network.h  sensor.c  sensor.h  test_main.c  web_server.c  web_server.h  web_ui.h  webserver.c  webserver.h  wifi.c  wifi.h
.devcontainer/: Dockerfile  devcontainer.json
microcontroller/: CMakeLists.txt  main.c
